@@ -228,7 +228,10 @@ public class TSMuxerVideo extends Player {
 				newInput.filename = fileName;
 				newInput.push = params.stdin;
 				
-				if (media != null && media.isVideoPS3Compatible(newInput)) { //$NON-NLS-1$ //$NON-NLS-2$
+				if (media != null) { //$NON-NLS-1$ //$NON-NLS-2$
+					boolean compat = media.isVideoPS3Compatible(newInput);
+					if (!compat)
+						PMS.info("The video will not play or show a black screen on the ps3...");
 					if (media.h264_annexB != null && media.h264_annexB.length > 0) {
 						StreamModifier sm = new StreamModifier();
 						sm.setHeader(media.h264_annexB);
